# vcmp-announce

./: .gitignore  Cargo.toml  config.toml  readme.md
.github/actions/build-libraries/: action.yml
.github/actions/download-libraries/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: release.yml
src/: announce.rs  cfg.rs  lib.rs  logger.rs  main.rs
