[package]
name = "vcmp-announce"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
vcmp_bindings = { git = "https://github.com/tianxiu2b2t/vcmp_bindings" }
